refactor: backport upstream latest commits to 1.20.1